--- a/lab8.html
+++ b/lab8.html
@@ -66,17 +66,34 @@
         <p class="trecho">Gripping your pillow tight</p>
         <p class="trecho">Exit light</p>
         <p class="trecho">Enter night</p>
-
+        
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/smack-that.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: Áudio original do trecho de Smack That (Akon), escolhido por Bruno Melati Kuvasney</p>
+        <p class="resumo"></p>
+        <p class="trecho">I feel you creeping, I can see you from my shadow</p>
+        <p class="trecho">Wanna jump up in my Lamborghini Gallardo?</p>
+        <p class="trecho">Maybe go to my place and just kick it like Tae Bo</p>
+        <p class="trecho">And possibly bend you over?</p>
+        <p class="trecho">Look back and watch me smack that all on the floor</p>
+        <p class="trecho">Smack that, give me some more</p>
+        <p class="trecho">Smack that, 'til you get sore</p>
+        <p class="trecho">Smack that, oh</p>
+        <p class="trecho">Smack that, all on the floor</p>
+        <p class="trecho">Smack that, give me some more</p>
+        <p class="trecho">Smack that</p>
 
         <h3>Espectrogramas originais</h3>
         <div class="gallery">
-            <img src="assets/img/lab 8/lucas/espectrograma_sandman.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
+            <img src="assets/img/lab 8/Bruno/espectro-original.png" alt="Espectrogramas do trecho da musica Smack That" onclick="expandImage(this)">
         </div>
-        <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
+        <p class="trecho">alt = Espectrogramas do trecho da musica Smack That</p>
 
         <h3>Conversão - Enter Sandman - Lucas Medeiros</h3>
 
-        <h4>MP3</h4>
+        <h4>MP3</h4>    
         <audio controls class="audio">
             <source src="assets/audio/lab 8/Lucas/Enter_sandman_128k.mp3" type="audio/wav">
             Seu navegador não suporta o elemento de áudio.
@@ -206,6 +223,139 @@
         </div>
         <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
 
+
+        <!-- PARTE BRUNO K -->
+        <h3>Conversão - Smack that - Bruno Melati Kuvasney</h3>
+
+        <h4>MP3</h4>    
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_128k.mp3" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em MP3 128Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_64k.mp3" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em MP3 64Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_32k.mp3" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em MP3 32Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_16k.mp3" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em MP3 16Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_8k.mp3" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em MP3 8Kbps</p>
+
+        <h3></h3>
+        <h4>OGG</h4>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_64k.ogg" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em OGG 64Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_32k.ogg" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em OGG 32Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_16k.ogg" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em OGG 16Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_8k.ogg" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em OGG 8Kbps</p>
+
+        <h3></h3>
+        <h4>MP3 e OGG com taxa variável</h4>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_320k_var.mp3" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em MP3 320kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_320k_var.ogg" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em OGG 320kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_128k_var.mp3" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em MP3 128Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_128k_var.ogg" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em OGG 128Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_65k_var.mp3" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em MP3 65Kbps</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Bruno/Smack_that_65k_var.ogg" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Smack that (Akon) em OGG 65Kbps</p>
+
+        <h3></h3>
+        <h4>Espectrogramas MP3</h4>
+        <p class="resumo"></p>
+        <div class="gallery">
+            <img src="assets/img/lab 8/Bruno/espectro_smack_128.png" alt="Espectrogramas do trecho da musica Smack that" onclick="expandImage(this)">
+        </div>
+        <p class="trecho">alt = Espectrogramas do trecho da musica Smack that</p>
+        <p class="resumo"></p>
+        <div class="gallery">
+            <img src="assets/img/lab 8/Bruno/espectro_smack_64.png" alt="Espectrogramas do trecho da musica Smack that" onclick="expandImage(this)">
+        </div>
+        <p class="trecho">alt = Espectrogramas do trecho da musica Smack that</p>
+        <p class="resumo"></p>
+        <div class="gallery">
+            <img src="assets/img/lab 8/Bruno/espectro_smack_32.png" alt="Espectrogramas do trecho da musica Smack that" onclick="expandImage(this)">
+        </div>
+        <p class="trecho">alt = Espectrogramas do trecho da musica Smack that</p>
+        <p class="resumo"></p>
+        <div class="gallery">
+            <img src="assets/img/lab 8/Bruno/espectro_smack_16.png" alt="Espectrogramas do trecho da musica Smack that" onclick="expandImage(this)">
+        </div>
+        <p class="trecho">alt = Espectrogramas do trecho da musica Smack that</p>
+        <p class="resumo"></p>
+        <div class="gallery">
+            <img src="assets/img/lab 8/Bruno/espectro_smack_8.png" alt="Espectrogramas do trecho da musica Smack that" onclick="expandImage(this)">
+        </div>
+        <p class="trecho">alt = Espectrogramas do trecho da musica Smack that</p>
+
+
+        <h3></h3>
+        <h4>Espectrogramas MP3 com taxa variável</h4>
+        <p class="resumo"></p>
+        <div class="gallery">
+            <img src="assets/img/lab 8/Bruno/espectro_smack_320var.png" alt="Espectrogramas do trecho da musica Smack that" onclick="expandImage(this)">
+        </div>
+        <p class="trecho">alt = Espectrogramas do trecho da musica Smack that</p>
+        <p class="resumo"></p>
+        <div class="gallery">
+            <img src="assets/img/lab 8/Bruno/espectro_smack_128var.png" alt="Espectrogramas do trecho da musica Smack that" onclick="expandImage(this)">
+        </div>
+        <p class="trecho">alt = Espectrogramas do trecho da musica Smack that</p>
+        <p class="resumo"></p>
+        <div class="gallery">
+            <img src="assets/img/lab 8/Bruno/espectro_smack_65var.png" alt="Espectrogramas do trecho da musica Smack that" onclick="expandImage(this)">
+        </div>
+        <p class="trecho">alt = Espectrogramas do trecho da musica Smack that</p>
 
         <h3>Tabela de tamanho dos arquivos após codificação</h3>
         <div class="gallery">
