--- a/lab8.html
+++ b/lab8.html
@@ -754,6 +754,38 @@
         </audio>
         <p>Alt: trecho da música Enter Sandman (Metallica) como se estivesse sendo tocada em uma sala de reator nuclear</p>
 
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Lucas/Enter_sandaman_escadaria.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Enter Sandman (Metallica) como se estivesse sendo tocada em uma escadaria</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Lucas/Enter_sandaman_auditorio.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Enter Sandman (Metallica) como se estivesse sendo tocada em um auditorio</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Lucas/Enter_sandaman_reator.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Enter Sandman (Metallica) como se estivesse sendo tocada em uma sala de reator nuclear</p>
+        
+
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Gabriel/Heres_to_you_escadaria.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Here's to you (Ennio Morricone) como se estivesse sendo tocada em uma escadaria</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Gabriel/Heres_to_you_auditorio.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Here's to you (Ennio Morricone) como se estivesse sendo tocada em um auditorio</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Gabriel/Heres_to_you_reator.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música Here's to you (Ennio Morricone) como se estivesse sendo tocada em uma sala de reator nuclear</p>
 
 
         <h3>Comentários e conclusões</h3>  
