--- a/lab8.html
+++ b/lab8.html
@@ -755,20 +755,20 @@
         <p>Alt: trecho da música Enter Sandman (Metallica) como se estivesse sendo tocada em uma sala de reator nuclear</p>
 
         <audio controls class="audio">
-            <source src="assets/audio/lab 8/Lucas/Enter_sandaman_escadaria.wav" type="audio/wav">
+            <source src="assets/audio/lab 8/Bruno/escadaria-akon.wav" type="audio/wav">
             Seu navegador não suporta o elemento de áudio.
         </audio>
-        <p>Alt: trecho da música Enter Sandman (Metallica) como se estivesse sendo tocada em uma escadaria</p>
+        <p>Alt: trecho da música Smack That (Akon) como se estivesse sendo tocada em uma escadaria</p>
         <audio controls class="audio">
-            <source src="assets/audio/lab 8/Lucas/Enter_sandaman_auditorio.wav" type="audio/wav">
+            <source src="assets/audio/lab 8/Lucas/auditorio-akon.wav" type="audio/wav">
             Seu navegador não suporta o elemento de áudio.
         </audio>
-        <p>Alt: trecho da música Enter Sandman (Metallica) como se estivesse sendo tocada em um auditorio</p>
+        <p>Alt: trecho da música Smack That (Akon) como se estivesse sendo tocada em um auditorio</p>
         <audio controls class="audio">
-            <source src="assets/audio/lab 8/Lucas/Enter_sandaman_reator.wav" type="audio/wav">
+            <source src="assets/audio/lab 8/Bruno/reator-akon.wav" type="audio/wav">
             Seu navegador não suporta o elemento de áudio.
         </audio>
-        <p>Alt: trecho da música Enter Sandman (Metallica) como se estivesse sendo tocada em uma sala de reator nuclear</p>
+        <p>Alt: trecho da música Smack That (Akon) como se estivesse sendo tocada em uma sala de reator nuclear</p>
         
 
         <audio controls class="audio">
