--- a/lab8.html
+++ b/lab8.html
@@ -99,6 +99,15 @@
         <p class="trecho">Rest forever here in our hearts</p>
         <p class="trecho">The last and final moment is yours</p>
 
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/BrunoN/Fascinacao.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: Áudio original de trecho de Fascinação (Elis Regina), escolhido por Bruno Neves Carneiro</p>
+        <p class="resumo"></p>
+        <p class="trecho">O teu corpo é luz, sedução</p>
+        <p class="trecho">Poema divino, cheio de esplendor</p>
+        <p class="trecho">Teu sorriso prende, inebria, entontece</p>
 
         <h3>Espectrogramas originais</h3>
         <div class="gallery">
@@ -115,6 +124,11 @@
             <img src="assets/img/lab 8/Gabriel/espectrograma_heres_to_you.png" alt="Espectrogramas do trecho da música Here's to you" onclick="expandImage(this)">
         </div>
         <p class="trecho">alt = Espectrogramas do trecho da música Here's to you</p>
+
+        <div class="gallery">
+            <img src="assets/img/lab 8/BrunoN/Espectrograma_00_Full.png" alt="Espectrogramas do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+        </div>
+        <p class="trecho">alt = Espectrogramas do trecho da música Fascinação (Elis Regina)</p>
 
         <h3>Conversão - Enter Sandman - Lucas Medeiros</h3>
 
@@ -629,6 +643,150 @@
     </div>
     <p class="trecho">alt = Espectrogramas do trecho da musica Here's to you</p>
 
+    <!-- Bruno - Inicio -->
+
+    <h3>Conversão - Fascinação (Elis Regina) - Bruno Neves Carneiro</h3>
+
+    <h4>MP3</h4>    
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_01_128k.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em MP3 128Kbps</p>
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_02_64k.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em MP3 64Kbps</p>
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_03_32k.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em MP3 32Kbps</p>
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_04_16k.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em MP3 16Kbps</p>
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_05_8k.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em MP3 8Kbps</p>
+
+    <!--
+    <h3></h3>
+    <h4>OGG</h4>
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_ogg_64k.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em OGG 64Kbps</p>
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_ogg_32k.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em OGG 32Kbps</p>
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_ogg_16k.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em OGG 16Kbps</p>
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_ogg_8k.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em OGG 8Kbps</p>
+-->
+
+    <h3></h3>
+    <h4>MP3 e OGG com taxa variável</h4>
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_06_320k_v.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em MP3 320kbps</p>
+    <!--
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_ogg_320k_v.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em OGG 320kbps</p>
+-->
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_07_128k_v.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em MP3 128Kbps</p>
+    <!--
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_ogg_128k_v.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em OGG 128Kbps</p>
+-->
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_08_65k_v.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em MP3 65Kbps</p>
+    <!--
+    <audio controls class="audio">
+        <source src="assets/audio/lab 8/BrunoN/Audio_ogg_65k_v.wav" type="audio/wav">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    <p>Alt: trecho da música Fascinação (Elis Regina) em OGG 65Kbps</p>
+-->
+
+    <h3></h3>
+    <h4>Espectrogramas MP3</h4>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_01_128k.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_02_64k.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_03_32k.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_04_16k.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_04_8k.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
+    
+
+    <h3></h3>
+    <h4>Espectrogramas MP3 com taxa variável</h4>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_06_320k_v.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_07_128k_v.png.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_08_65k_v.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
+
+
+    <!-- Bruno - Fim-->
 
     <h3></h3>
     <h4>Espectrogramas MP3 com taxa variável</h4>
