--- a/lab8.html
+++ b/lab8.html
@@ -790,19 +790,19 @@
     <h4>Espectrogramas MP3 com taxa variável</h4>
     <p class="resumo"></p>
     <div class="gallery">
-        <img src="assets/img/lab 8/BrunoN/Espectrograma_06_320k_v.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_06_320k_v.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
     </div>
-    <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
+    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
     <p class="resumo"></p>
     <div class="gallery">
-        <img src="assets/img/lab 8/BrunoN/Espectrograma_07_128k_v.png.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_07_128k_v.png.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
     </div>
-    <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
+    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
     <p class="resumo"></p>
     <div class="gallery">
-        <img src="assets/img/lab 8/BrunoN/Espectrograma_08_65k_v.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_08_65k_v.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
     </div>
-    <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
+    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
 
 
     <!-- Bruno - Fim-->
