--- a/lab8.html
+++ b/lab8.html
@@ -643,25 +643,6 @@
     </div>
     <p class="trecho">alt = Espectrogramas do trecho da musica Here's to you</p>
 
-    <h3></h3>
-    <h4>Espectrogramas MP3 com taxa variável</h4>
-    <p class="resumo"></p>
-    <div class="gallery">
-        <img src="assets/img/lab 8/Gabriel/espectrograma_heres_to_you_320var.png" alt="Espectrogramas do trecho da musica Here's to you" onclick="expandImage(this)">
-    </div>
-    <p class="trecho">alt = Espectrogramas do trecho da musica Here's to you</p>
-    <p class="resumo"></p>
-    <div class="gallery">
-        <img src="assets/img/lab 8/Gabriel/espectrograma_heres_to_you_128var.png" alt="Espectrogramas do trecho da musica Here's to you" onclick="expandImage(this)">
-    </div>
-    <p class="trecho">alt = Espectrogramas do trecho da musica Here's to you</p>
-    <p class="resumo"></p>
-    <div class="gallery">
-        <img src="assets/img/lab 8/Gabriel/espectrograma_heres_to_you_65var.png" alt="Espectrogramas do trecho da musica Here's to you" onclick="expandImage(this)">
-    </div>
-    <p class="trecho">alt = Espectrogramas do trecho da musica Here's to you</p>
-
-
     <!-- Bruno - Inicio -->
 
     <h3>Conversão - Fascinação (Elis Regina) - Bruno Neves Carneiro</h3>
@@ -790,23 +771,40 @@
     <h4>Espectrogramas MP3 com taxa variável</h4>
     <p class="resumo"></p>
     <div class="gallery">
-        <img src="assets/img/lab 8/BrunoN/Espectrograma_06_320k_v.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_06_320k_v.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
     </div>
-    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
+    <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
     <p class="resumo"></p>
     <div class="gallery">
-        <img src="assets/img/lab 8/BrunoN/Espectrograma_07_128k_v.png.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_07_128k_v.png.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
     </div>
-    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
+    <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
     <p class="resumo"></p>
     <div class="gallery">
-        <img src="assets/img/lab 8/BrunoN/Espectrograma_08_65k_v.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_08_65k_v.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
     </div>
-    <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
+    <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
 
 
     <!-- Bruno - Fim-->
 
+    <h3></h3>
+    <h4>Espectrogramas MP3 com taxa variável</h4>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/Gabriel/espectrograma_heres_to_you_320var.png" alt="Espectrogramas do trecho da musica Here's to you" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrogramas do trecho da musica Here's to you</p>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/Gabriel/espectrograma_heres_to_you_128var.png" alt="Espectrogramas do trecho da musica Here's to you" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrogramas do trecho da musica Here's to you</p>
+    <p class="resumo"></p>
+    <div class="gallery">
+        <img src="assets/img/lab 8/Gabriel/espectrograma_heres_to_you_65var.png" alt="Espectrogramas do trecho da musica Here's to you" onclick="expandImage(this)">
+    </div>
+    <p class="trecho">alt = Espectrogramas do trecho da musica Here's to you</p>
 
         <h3>Tabela de tamanho dos arquivos após codificação</h3>
         <div class="gallery">
