--- a/lab8.html
+++ b/lab8.html
@@ -762,7 +762,7 @@
     <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
     <p class="resumo"></p>
     <div class="gallery">
-        <img src="assets/img/lab 8/BrunoN/Espectrograma_04_8k.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_05_8k.png" alt="Espectrograma do trecho da música Fascinação (Elis Regina)" onclick="expandImage(this)">
     </div>
     <p class="trecho">alt = Espectrograma do trecho da música Fascinação (Elis Regina)</p>
     
@@ -776,7 +776,7 @@
     <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
     <p class="resumo"></p>
     <div class="gallery">
-        <img src="assets/img/lab 8/BrunoN/Espectrograma_07_128k_v.png.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
+        <img src="assets/img/lab 8/BrunoN/Espectrograma_07_128k_v.png" alt="Espectrogramas do trecho da musica Enter Sandman" onclick="expandImage(this)">
     </div>
     <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
     <p class="resumo"></p>
