--- a/lab8.html
+++ b/lab8.html
@@ -945,6 +945,25 @@
         </audio>
         <p>Alt: trecho da música Here's to you (Ennio Morricone) como se estivesse sendo tocada em uma sala de reator nuclear</p>
 
+        <!--Bruno Inicio-->
+
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/BrunoN/Audio_Fascinacao_Escadaria.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música música Fascinação (Elis Regina) como se estivesse sendo tocada em uma escadaria</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Audio_Fascinacao_Auditorio.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música música Fascinação (Elis Regina) como se estivesse sendo tocada em um auditório</p>
+        <audio controls class="audio">
+            <source src="assets/audio/lab 8/Audio_Fascinacao_Reator.wav" type="audio/wav">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: trecho da música música Fascinação (Elis Regina) como se estivesse sendo tocada em uma sala de um reator nuclear</p>
+
+        <!--Bruno Fim-->
 
         <h3>Comentários e conclusões</h3>  
         <p class="resumo">A simulação da reprodução de trechos musicais em ambientes distintos, utilizando as respostas impulsivas (IRs) desses espaços, 
